Add update font

--- a/fr.tex
+++ b/fr.tex
@@ -28,7 +28,7 @@
 \usepackage{fontspec, xunicode, xltxtra}
 \usepackage{xeCJK}
 
-\setmainfont{HarmonyOS Sans}
+\setmainfont{Calibri}
 \setCJKmainfont{HarmonyOS Sans SC}
 
 \usepackage[ocgcolorlinks]{hyperref}
@@ -60,15 +60,15 @@ Docteur en génie électrique et électronique et ingénieur principal en normal
 
 \begin{rSection}{Formation}
 
-{\bf Université de Hong Kong} \hfill {Sep 2013 -- Jun 2020} \\ 
+{\bf Université de Hong Kong} \hfill {Sep 2013 -- Juin 2020} \\ 
 Doctorat \\
-Titre de la thèse : \href{http://hdl.handle.net/10722/318421}{\textit{Nouvelles techniques de compression de cartes de profondeur}}
+Titre de la thèse : \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
 
 {\bf Université nationale de Singapour} \hfill {Août 2008 -- Déc 2008} \\ 
 Étudiant en échange, Génie électrique et informatique
 
 {\bf Université polytechnique de Hong Kong} \hfill {Sep 2006 -- Août 2011} \\ 
-Licence en ingénierie électronique et informatique, mention très bien, avec stage industriel de 12 mois
+Licence en ingénierie électronique et informatique, honneur du 1er classe, avec stage industriel de 12 mois
 
 \end{rSection}
 
@@ -77,17 +77,17 @@ Licence en ingénierie électronique et informatique, mention très bien, avec s
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Expérience professionnelle}
-	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Aujourd'hui}{Ingénieur principal, Normalisation technique chez Eagle Lab}{Shenzhen}
+	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Aujourd'hui}{Ingénieur senior, normalisation technique chez Eagle Lab}{Shenzhen}
 		\item Effectuer des pré-recherches techniques sur les technologies de codage audio/vidéo et analyser les brevets pertinents
 		\item Développer de nouvelles techniques de compression vidéo pour les demandes de brevets et la normalisation
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Shenzhen}{Oct 2020 -- Déc 2022}{Chercheur postdoctoral à l'École de génie biomédical}{Shenzhen}
+	\begin{rSubsection}{Université de Shenzhen}{Oct 2020 -- Déc 2022}{Chercheur postdoctoral à l'école de génie biomédical}{Shenzhen}
 		\item Travaillé sur des investigations de neuroscience cognitive liées à l'électroencéphalographie (EEG)
 		\item Travaillé sur le projet : localisation des contacts d'électrodes EEG intracrâniennes dans les scanners CT
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Hong Kong}{Juillet 2016 -- Juin 2019}{Assistant de recherche au Département de génie électrique et électronique}{Hong Kong}
+	\begin{rSubsection}{Université de Hong Kong}{Juil 2016 -- Juin 2019}{Assistant de recherche au Département de génie électrique et électronique}{Hong Kong}
 		\item Travaillé sur le codage vidéo 3D
 		\item Notre codec de carte de profondeur surpassait le 3D-HEVC à cette époque
 	\end{rSubsection}
@@ -96,10 +96,8 @@ Licence en ingénierie électronique et informatique, mention très bien, avec s
 		\item Développé des méthodes de codage vidéo 3D et traité des documents de propriété intellectuelle 
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Hong Kong}{Août 2011 -- Août 2015}{Assistant de recherche au Département de génie électrique et électronique}{Hong Kong}
-		\item Travaillé en collaboration avec le groupe de travail sur les normes de codage audio-vid
-
-éo (AVS) de la Chine
+	\begin{rSubsection}{Université de Hong Kong}{Août 2011 -- Août 2015}{Assistant de recherche au département de génie électrique et électronique}{Hong Kong}
+		\item Travaillé en collaboration avec le groupe de travail sur les normes de codage audio-vidéo (AVS) de la Chine
 		\item Axé sur la conception et l'accélération des codecs vidéo, la génération de contenu vidéo 3D
 		\item Réalisé un encodage et un décodage vidéo AVS en temps réel sur une plateforme ARM+DSP basse consommation
 		\item Développé un outil de segmentation d'images semi-automatique
@@ -165,7 +163,8 @@ Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of 
 \begin{rSection}{Compétences techniques}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{2ex}} l }
-Langues naturelles & Mandarin (langue maternelle), Cantonais (langue maternelle), Anglais (courant) \\
+Langues naturelles & Mandarin (langue maternelle), Cantonais (langue maternelle), \\
+ & Anglais (courant) \\
 Langages informatiques & C/C++, MatLab, Python \\
 Outils & Visual Studio, VSCode, Eclipse, plateforme Anaconda
 \end{tabular}
