--- a/en.tex
+++ b/en.tex
@@ -28,7 +28,7 @@
 \usepackage{fontspec, xunicode, xltxtra}
 \usepackage{xeCJK}
 
-\setmainfont{Calibri}
+\setmainfont{HarmonyOS Sans}
 \setCJKmainfont{HarmonyOS Sans SC}
 
 \usepackage[ocgcolorlinks]{hyperref}
@@ -116,7 +116,7 @@ Bachelor of Engineering in Electronic and Information Engineering, 1st Class Hon
 \begin{rSection}{Projects}
 
 	\begin{rSubsection}{Intracranial Video-electroencephalography}{Apr 2022 -- Oct 2022}{}{}
-		\item Localise EEG electrode contacts from CT scans for pre-surgical planning
+		\item Localised EEG electrode contacts from CT scans for pre-surgical planning
 		\item Primarily achieved localisation and automatic grouping
 	\end{rSubsection}
 
