--- a/fr.tex
+++ b/fr.tex
@@ -28,7 +28,7 @@
 \usepackage{fontspec, xunicode, xltxtra}
 \usepackage{xeCJK}
 
-\setmainfont{Calibri}
+\setmainfont{HarmonyOS Sans}
 \setCJKmainfont{HarmonyOS Sans SC}
 
 \usepackage[ocgcolorlinks]{hyperref}
@@ -77,17 +77,17 @@ Licence en ingénierie électronique et informatique, honneur du 1er classe, ave
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Expérience professionnelle}
-	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Aujourd'hui}{Ingénieur senior, normalisation technique chez Eagle Lab}{Shenzhen}
+	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Aujourd'hui}{Ingénieur sénior, normalisation technique à l'Eagle Lab}{Shenzhen}
 		\item Effectuer des pré-recherches techniques sur les technologies de codage audio/vidéo et analyser les brevets pertinents
 		\item Développer de nouvelles techniques de compression vidéo pour les demandes de brevets et la normalisation
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Shenzhen}{Oct 2020 -- Déc 2022}{Chercheur postdoctoral à l'école de génie biomédical}{Shenzhen}
+	\begin{rSubsection}{Université de Shenzhen}{Oct 2020 -- Déc 2022}{Chercheur postdoctoral à School of Biomedical Engineering}{Shenzhen}
 		\item Travaillé sur des investigations de neuroscience cognitive liées à l'électroencéphalographie (EEG)
 		\item Travaillé sur le projet : localisation des contacts d'électrodes EEG intracrâniennes dans les scanners CT
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Hong Kong}{Juil 2016 -- Juin 2019}{Assistant de recherche au Département de génie électrique et électronique}{Hong Kong}
+	\begin{rSubsection}{Université de Hong Kong}{Juil 2016 -- Juin 2019}{Assistant de recherche à Departement of Electrical and Electronic Engineering}{Hong Kong}
 		\item Travaillé sur le codage vidéo 3D
 		\item Notre codec de carte de profondeur surpassait le 3D-HEVC à cette époque
 	\end{rSubsection}
@@ -96,14 +96,14 @@ Licence en ingénierie électronique et informatique, honneur du 1er classe, ave
 		\item Développé des méthodes de codage vidéo 3D et traité des documents de propriété intellectuelle 
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Université de Hong Kong}{Août 2011 -- Août 2015}{Assistant de recherche au département de génie électrique et électronique}{Hong Kong}
+	\begin{rSubsection}{Université de Hong Kong}{Août 2011 -- Août 2015}{Assistant de recherche à Departement of Electrical and Electronic Engineering}{Hong Kong}
 		\item Travaillé en collaboration avec le groupe de travail sur les normes de codage audio-vidéo (AVS) de la Chine
 		\item Axé sur la conception et l'accélération des codecs vidéo, la génération de contenu vidéo 3D
 		\item Réalisé un encodage et un décodage vidéo AVS en temps réel sur une plateforme ARM+DSP basse consommation
 		\item Développé un outil de segmentation d'images semi-automatique
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Solomon Systech Limited}{Juin 2009 -- Mai 2010}{Stagiaire en ingénierie au département de conception}{Hong Kong}
+	\begin{rSubsection}{Solomon Systech Limited}{Juin 2009 -- Mai 2010}{Stagiaire en ingénierie à Design Departement}{Hong Kong}
 		\item Travaillé sur des algorithmes de compression et de codage d'images pour les systèmes d'affichage des appareils mobiles
 		\item Conçu des spécifications et développé des logiciels de support pour un nouveau produit de microcontrôleur
 	\end{rSubsection}
@@ -116,17 +116,17 @@ Licence en ingénierie électronique et informatique, honneur du 1er classe, ave
 \begin{rSection}{Projets}
 
 	\begin{rSubsection}{Vidéo-électroencéphalographie intracrânienne}{Avr 2022 -- Oct 2022}{}{}
-		\item Localisation des contacts d'électrodes EEG à partir des scanners CT pour la planification pré-chirurgicale
-		\item Réalisé principalement la localisation et le regroupement automatique
+		\item Localisation des contacts d'électrodes EEG des images CT pour la planification pré-chirurgicale
+		\item Réalisation principalement de la localisation et le regroupement automatique
 	\end{rSubsection}
 
-	\begin{rSubsection}{Système de compression des données vidéo auxiliaires et de synthèse de vues}{Mai 2015 -- Nov 2018}{}{}
+	\begin{rSubsection}{Compression des données vidéo auxiliaires et synthèse de vues}{Mai 2015 -- Nov 2018}{}{}
 		\item Conception d'algorithmes de compression pour les images et les vidéos de profondeur
 		\item Présentation d'une performance de compression comparable ou supérieure à celle du 3D-HEVC sans recourir aux images de texture
 		\item Développement d'un logiciel accéléré par GPU pour le décodage en temps réel en 1080p
 	\end{rSubsection}
 		
-	\begin{rSubsection}{Système de génération et de traitement de contenu vidéo 3D}{Mai 2013 -- Août 2015}{}{}
+	\begin{rSubsection}{Génération et traitement de contenu vidéo 3D}{Mai 2013 -- Août 2015}{}{}
 		\item Développement d'algorithmes de segmentation d'images
 		\item Développement d'un outil de segmentation d'images semi-automatique et de gestion des données pour notre partenaire de collaboration
 	\end{rSubsection}
