--- a/en.tex
+++ b/en.tex
@@ -28,7 +28,7 @@
 \usepackage{fontspec, xunicode, xltxtra}
 \usepackage{xeCJK}
 
-\setmainfont{HarmonyOS Sans}
+\setmainfont{Segoe UI}
 \setCJKmainfont{HarmonyOS Sans SC}
 
 \usepackage[ocgcolorlinks]{hyperref}
