--- a/fr.tex
+++ b/fr.tex
@@ -28,7 +28,7 @@
 \usepackage{fontspec, xunicode, xltxtra}
 \usepackage{xeCJK}
 
-\setmainfont{HarmonyOS Sans}
+\setmainfont{Segoe UI}
 \setCJKmainfont{HarmonyOS Sans SC}
 
 \usepackage[ocgcolorlinks]{hyperref}
@@ -78,22 +78,22 @@ Licence en ingénierie électronique et informatique, honneur du 1er classe, ave
 
 \begin{rSection}{Expérience professionnelle}
 	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Aujourd'hui}{Ingénieur sénior, normalisation technique à l'Eagle Lab}{Shenzhen}
-		\item Effectuer des pré-recherches techniques sur les technologies de codage audio/vidéo et analyser les brevets pertinents
-		\item Développer de nouvelles techniques de compression vidéo pour les demandes de brevets et la normalisation
+		\item Pré-recherches techniques sur les technologies de codage audio/vidéo et analyser les brevets pertinents
+		\item Développement de nouvelles techniques de compression vidéo pour les demandes de brevets et la normalisation
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Université de Shenzhen}{Oct 2020 -- Déc 2022}{Chercheur postdoctoral à School of Biomedical Engineering}{Shenzhen}
-		\item Travaillé sur des investigations de neuroscience cognitive liées à l'électroencéphalographie (EEG)
-		\item Travaillé sur le projet : localisation des contacts d'électrodes EEG intracrâniennes dans les scanners CT
+		\item Recherche en neuroscience cognitive liées à l'électroencéphalographie (EEG)
+		\item Localisation des contacts d'électrodes EEG intracrâniennes dans les scanners CT
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Université de Hong Kong}{Juil 2016 -- Juin 2019}{Assistant de recherche à Departement of Electrical and Electronic Engineering}{Hong Kong}
-		\item Travaillé sur le codage vidéo 3D
+		\item Codage de vidéos 3D
 		\item Notre codec de carte de profondeur surpassait le 3D-HEVC à cette époque
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Marvel Digital Limited}{Août 2015 -- Déc 2017}{Consultant}{Hong Kong}
-		\item Développé des méthodes de codage vidéo 3D et traité des documents de propriété intellectuelle 
+		\item Développement des méthodes de codage vidéo 3D et traité des documents de propriété intellectuelle 
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Université de Hong Kong}{Août 2011 -- Août 2015}{Assistant de recherche à Departement of Electrical and Electronic Engineering}{Hong Kong}
