--- a/en.tex
+++ b/en.tex
@@ -68,7 +68,8 @@ Thesis title: \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques
 Exchange Student, Electrical and Computer Engineering
 
 {\bf The Hong Kong Polytechnic University} \hfill {Sep 2006 -- Aug 2011} \\ 
-Bachelor of Engineering in Electronic and Information Engineering, 1st Class Honours, includes 12-month industrial training
+Bachelor of Engineering in Electronic and Information Engineering \\
+Graduated with 1st Class Honours, including 12-month industrial training
 
 \end{rSection}
 
