--- a/fr.tex
+++ b/fr.tex
@@ -65,10 +65,11 @@ Doctorat \\
 Titre de la thèse : \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
 
 {\bf Université nationale de Singapour} \hfill {Août 2008 -- Déc 2008} \\ 
-Étudiant en échange, Génie électrique et informatique
+Programme d'échanges
 
 {\bf Université polytechnique de Hong Kong} \hfill {Sep 2006 -- Août 2011} \\ 
-Licence en ingénierie électronique et informatique, honneur du 1er classe, avec stage industriel de 12 mois
+Baccalauréat en ingénierie, ingénierie électronique et informatique \\
+Avec l'honneur du 1er classe et le stage industriel de 12 mois
 
 \end{rSection}
 
