--- a/zh.tex
+++ b/zh.tex
@@ -42,7 +42,6 @@
 \name{覃泓胨} % Your name
 \address{(+86)~13603087140 \\ hongdongdonald@gmail.com} % Your phone number and email
 
-
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -62,14 +61,15 @@
 \begin{rSection}{教育经历}
 
 {\bf 香港大学} \hfill {2013年09月 -- 2020年06月} \\ 
-哲学博士，电机电子工程 \\
+哲学博士 \\
 毕业论文: \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
 
 {\bf 新加坡国立大学} \hfill {2008年08月 -- 2008年12月} \\ 
 电机与电脑工程系交换生
 
 {\bf 香港理工大学} \hfill {2006年09月 -- 2011年08月} \\ 
-工学学士，电子及资讯工程学，甲等荣誉，包含12个月实习训练
+工学学士，电子及资讯工程学 \\
+甲等荣誉，包含12个月实习训练
 
 \end{rSection}
 
