--- a/zh.tex
+++ b/zh.tex
@@ -80,7 +80,7 @@
 \begin{rSection}{工作经历}
     \begin{rSubsection}{TCL}{2023年01月 -- 现在}{鸿鹄实验室，技术标准高级工程师}{深圳}
         \item 视频编解码技术预研，相关专利分析
-		\item 开发视频编解码新方法，专利申请，参与标准制定
+		\item 开发视频编解码新方法，参与标准制定
     \end{rSubsection}
 
     \begin{rSubsection}{深圳大学}{2020年10月 -- 2022年12月}{医学部生物医学工程学院，博士后研究员}{深圳}
@@ -91,6 +91,7 @@
 	\begin{rSubsection}{香港大学}{2016年07月 -- 2019年06月}{电机电子工程系，研究助理}{香港}
 	\item 研发三维视频编解码方法
 	\item 自行开发的深度图压缩方法的效能超越同期的3D-HEVC
+	\item 实现1920$\times$1080分辨率实时软件解码
 	\end{rSubsection}
 
     \begin{rSubsection}{万维数码}{2015年08月 -- 2017年12月}{工程咨询师}{香港}
@@ -136,7 +137,7 @@
         \item 为制作三维视频的合作方提供了一个给图像进行物体切割，分层，组织数据的操作工具
     \end{rSubsection}
 
-    \begin{rSubsection}{AVS-1视频编码标准在ARM+DSP平台的实现}{2011年08月 -- 2013年05月}{}{}
+    \begin{rSubsection}{AVS-1视频编码标准在移动平台的实现}{2011年08月 -- 2013年05月}{}{}
         \item 将AVS的视频编解码移植到与移动设备功耗相当的ARM+DSP平台
         \item 通过计算负载重新分配和异步处理，达到720p视频的实时编码和解码
     \end{rSubsection}
@@ -166,8 +167,8 @@ Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of 
 \begin{rSection}{其它技能}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-人类语言 & 普通话（母语），粤语（母语），英语（熟练流利）\\
-计算机语言 & C/C++, MatLab, Python \\
+人类语言 & 普通话（母语），粤语（母语），英语（熟练流利），法语（爱好，会一点）\\
+计算机语言 & C/C++, Python, MatLab \\
 开发工具 & Visual Studio, VSCode, Eclipse, Anaconda platform 
 \end{tabular}
 
