Add multilingual file

--- a/multi.tex
+++ b/multi.tex
@@ -45,7 +45,7 @@
 \newcommand{\en}[1]{\ifen#1\fi}
 \newcommand{\zh}[1]{\ifzh#1\fi}
 
-\zhtrue
+\entrue
 
 \name{\en{QIN Hongdong}\zh{覃泓胨}} % Your name
 \address{(+86)13603087140 \\ hongdongdonald@gmail.com} % Your phone number and email
@@ -69,7 +69,7 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{\en{Education}\zh{教育经历}}
+\begin{rSection}{\en{Education}\zh{教育背景}}
 \en{
 {\bf The University of Hong Kong} \hfill {Sep 2013 -- Jun 2020} \\ 
 Doctor of Philosophy \\
@@ -106,36 +106,49 @@ Graduated with 1st Class Honours, including 12-month industrial training
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Work Experience}
-	\begin{rSubsection}{TCL Industries}{Jan 2023 -- Now}{Senior Engineer, Technical Standardisation at Eagle Lab}{Shenzhen}
-		\item Perform technical pre-research on audio/video coding technologies and analyse patents
-		\item Develop new video compression methods for standardisation purposes
+\begin{rSection}{\en{Work Experience}\zh{工作经历}}
+	\begin{rSubsection}{TCL}{\en{Jan 2023 -- Now}\zh{2023年01月 -- 现在}}{\en{Senior Engineer, Technical Standardisation at Eagle Lab}\zh{鸿鹄实验室，技术标准高级工程师}}{\en{Shenzhen}\zh{深圳}}
+		\en{\item Perform technical pre-research on audio/video coding technologies and analyse patents}
+		\zh{\item 视频编解码技术预研，相关专利分析}
+		\en{\item Develop new video compression methods for standardisation purposes}
+		\zh{\item 开发视频编解码新方法，参与标准制定}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Shenzhen University}{Oct 2020 -- Dec 2022}{Post-doctoral Researcher at School of Biomedical Engineering}{Shenzhen}
-		\item Worked on electroencephalography (EEG) related cognitive neuroscience investigations
-		\item Worked on project: localisation of intracranial EEG electrode contacts in CT scans
+	\begin{rSubsection}{\en{Shenzhen University}\zh{深圳大学}}{\en{Oct 2020 -- Dec 2022}\zh{2020年10月 -- 2022年12月}}{\en{Post-doctoral Researcher at School of Biomedical Engineering}\zh{生物医学工程学院，博士后研究员}}{\en{Shenzhen}\zh{深圳}}
+		\en{\item Worked on electroencephalography (EEG) related cognitive neuroscience investigations}        
+		\zh{\item 基于视频脑电的认识神经科学研究}
+		\en{\item Worked on project: localisation of intracranial EEG electrode contacts in CT scans}
+        \zh{\item 负责研发CT扫描中的颅内脑电电极定位算法}
 	\end{rSubsection}
 	
 	\begin{rSubsection}{The University of Hong Kong}{Jul 2016 -- Jun 2019}{Research Assistant at Department of Electrical and Electronic Engineering}{Hong Kong}
-		\item Researched on 3D video coding
-		\item Depth map codec outperformed 3D-HEVC
+		\en{\item Researched on 3D video coding}
+		\en{\item Depth map codec outperformed 3D-HEVC}
+        \zh{\item 研发三维视频编解码方法}
+        \zh{\item 自行开发的深度图压缩方法的效能超越同期的3D-HEVC}
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Marvel Digital Limited}{Aug 2015 -- Dec 2017}{Consultant}{Hong Kong}
-		\item Developed 3D video coding methods and deal with intellectual property paperworks 
+		\en{\item Developed 3D video coding methods and deal with intellectual property paperworks} 
+        \zh{\item 参与三维视频编解码标准竞投，撰写专利文书}
 	\end{rSubsection}
 	
 	\begin{rSubsection}{The University of Hong Kong}{Aug 2011 -- Aug 2015}{Research Assistant at Department of Electrical and Electronic Engineering}{Hong Kong}
-		\item Worked in collaboration with Audio Video coding Standard workgroup (AVS)  of China
-		\item Focused on video codec design and acceleration, 3D video content generation
-		\item Achieved real-time AVS video encoding and decoding in ARM+DSP low power platform
-		\item Developed a semi-automatic image segmentation tool
+		\en{\item Worked in collaboration with Audio Video coding Standard workgroup (AVS)  of China}
+		\en{\item Focused on video codec design and acceleration, 3D video content generation}
+		\en{\item Achieved real-time AVS video encoding and decoding in ARM+DSP low power platform}
+		\en{\item Developed a semi-automatic image segmentation tool}
+        \zh{\item 参与中国数字音视频编解码技术标准项目（AVS）的研发}
+        \zh{\item 研发视频编解码加速、在三维视频内容生成方法}
+        \zh{\item AVS-1在ARM+DSP平台上可以达到实时的编解码}
+        \zh{\item 开发半自动的图像分割和抠图工具}
 	\end{rSubsection}
 	
 	\begin{rSubsection}{Solomon Systech Limited}{Jun 2009 -- May 2010}{Engineering Trainee at Design Engineering Department}{Hong Kong}
-		\item Worked on image compression and coding algorithms for mobile device display system
-		\item Designed specifications and develop supporting softwares for new microcontroller product
+		\en{\item Worked on image compression and coding algorithms for mobile device display system}
+		\en{\item Designed specifications and develop supporting softwares for new microcontroller product}
+        \zh{\item 移动端显示设备上的快速图像编解码}
+        \zh{\item 参与开发和测试新微控制器产品的汇编环境等工具，测试指令集}
 	\end{rSubsection}
 \end{rSection}
 
