--- a/multi.tex
+++ b/multi.tex
@@ -70,84 +70,96 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{\en{Education}\zh{教育背景}}
-\en{
-{\bf The University of Hong Kong} \hfill {Sep 2013 -- Jun 2020} \\ 
-Doctor of Philosophy \\
-Thesis title: \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
-}
-\zh{
-{\bf 香港大学} \hfill {2013年09月 -- 2020年06月} \\ 
-哲学博士 \\
-毕业论文: \href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
-}
+	\begin{rSubsection}{\en{The University of Hong Kong}\zh{香港大学}}
+		{2013-09 -- 2020-06}
+		{\en{Doctor of Philosophy}\zh{哲学博士}}
+		{\en{Hong Kong}\zh{香港}}
+		\item \en{Thesis: }\zh{毕业论文：}\href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
+	\end{rSubsection}
 
-\en{
-{\bf National University of Singapore} \hfill {Aug 2008 -- Dec 2008} \\ 
-Exchange Student, Electrical and Computer Engineering
-}
-\zh{
-{\bf 新加坡国立大学} \hfill {2008年08月 -- 2008年12月} \\ 
-电机与电脑工程系交换生
-}
+	\begin{rSubsection}{\en{National University of Singapore}\zh{新加坡国立大学}}
+		{2008-08 -- 2008-12}
+		{\en{Exchange Student, Electrical and Computer Engineering}\zh{电机与电脑工程系交换生}}
+		{\en{Singapore}\zh{新加坡}}
+		\item ~
+	\end{rSubsection}
 
-\en{
-{\bf The Hong Kong Polytechnic University} \hfill {Sep 2006 -- Aug 2011} \\ 
-Bachelor of Engineering in Electronic and Information Engineering \\
-Graduated with 1st Class Honours, including 12-month industrial training
-}
-\zh{
-{\bf 香港理工大学} \hfill {2006年09月 -- 2011年08月} \\ 
-工学学士，电子及资讯工程学 \\
-甲等荣誉，包含12个月实习训练
-}
+	\begin{rSubsection}{\en{The Hong Kong Polytechnic University}\zh{香港理工大学}}
+		{2006-09 -- 2011-08}
+		{\en{Bachelor of Engineering in Electronic and Information Engineering}\zh{工学学士，电子及资讯工程学}}
+		{\en{Hong Kong}\zh{香港}}
+		\en{\item Graduated with 1st Class Honours}
+		\zh{\item 甲等荣誉}
+		\en{\item Included 12-month industrial training}
+		\zh{\item 包含12个月实习训练}
+	\end{rSubsection}
+
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------
+	WORK EXPERIENCE SECTION
+----------------------------------------------------------------------------------------
 
 \begin{rSection}{\en{Work Experience}\zh{工作经历}}
-	\begin{rSubsection}{TCL}{\en{Jan 2023 -- Now}\zh{2023年01月 -- 现在}}{\en{Senior Engineer, Technical Standardisation at Eagle Lab}\zh{鸿鹄实验室，技术标准高级工程师}}{\en{Shenzhen}\zh{深圳}}
+	\begin{rSubsection}{TCL}
+		{2023-01 -- \en{Now}\zh{现在}}
+		{\en{Senior Engineer, Technical Standardisation at Eagle Lab}\zh{鸿鹄实验室，技术标准高级工程师}}
+		{\en{Shenzhen}\zh{深圳}}
 		\en{\item Perform technical pre-research on audio/video coding technologies and analyse patents}
 		\zh{\item 视频编解码技术预研，相关专利分析}
 		\en{\item Develop new video compression methods for standardisation purposes}
 		\zh{\item 开发视频编解码新方法，参与标准制定}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{\en{Shenzhen University}\zh{深圳大学}}{\en{Oct 2020 -- Dec 2022}\zh{2020年10月 -- 2022年12月}}{\en{Post-doctoral Researcher at School of Biomedical Engineering}\zh{生物医学工程学院，博士后研究员}}{\en{Shenzhen}\zh{深圳}}
+	\begin{rSubsection}{\en{Shenzhen University}\zh{深圳大学}}
+		{2020-10 -- 2022-12}
+		{\en{Post-doctoral Researcher at School of Biomedical Engineering}\zh{生物医学工程学院，博士后研究员}}
+		{\en{Shenzhen}\zh{深圳}}
 		\en{\item Worked on electroencephalography (EEG) related cognitive neuroscience investigations}        
 		\zh{\item 基于视频脑电的认识神经科学研究}
 		\en{\item Worked on project: localisation of intracranial EEG electrode contacts in CT scans}
         \zh{\item 负责研发CT扫描中的颅内脑电电极定位算法}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{The University of Hong Kong}{Jul 2016 -- Jun 2019}{Research Assistant at Department of Electrical and Electronic Engineering}{Hong Kong}
+	\begin{rSubsection}{\en{The University of Hong Kong}\zh{香港大学}}
+		{2016-07 -- 2019-06}
+		{\en{Research Assistant at Department of Electrical and Electronic Engineering}\zh{电机电子工程系，研究助理}}
+		{\en{Hong Kong}\zh{香港}}
 		\en{\item Researched on 3D video coding}
-		\en{\item Depth map codec outperformed 3D-HEVC}
         \zh{\item 研发三维视频编解码方法}
+		\en{\item Depth map codec outperformed 3D-HEVC}
         \zh{\item 自行开发的深度图压缩方法的效能超越同期的3D-HEVC}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Marvel Digital Limited}{Aug 2015 -- Dec 2017}{Consultant}{Hong Kong}
+	\begin{rSubsection}{\en{Marvel Digital Limited}\zh{万维数码}}
+		{2015-08 -- 2017-12}
+		{\en{Consultant}\zh{工程咨询师}}
+		{\en{Hong Kong}\zh{香港}}
 		\en{\item Developed 3D video coding methods and deal with intellectual property paperworks} 
         \zh{\item 参与三维视频编解码标准竞投，撰写专利文书}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{The University of Hong Kong}{Aug 2011 -- Aug 2015}{Research Assistant at Department of Electrical and Electronic Engineering}{Hong Kong}
+	\begin{rSubsection}{\en{The University of Hong Kong}\zh{香港大学}}
+		{2011-08 -- 2015-08}
+		{\en{Research Assistant at Department of Electrical and Electronic Engineering}\zh{电机电子工程系，研究助理}}
+		{\en{Hong Kong}\zh{香港}}
 		\en{\item Worked in collaboration with Audio Video coding Standard workgroup (AVS)  of China}
-		\en{\item Focused on video codec design and acceleration, 3D video content generation}
-		\en{\item Achieved real-time AVS video encoding and decoding in ARM+DSP low power platform}
-		\en{\item Developed a semi-automatic image segmentation tool}
         \zh{\item 参与中国数字音视频编解码技术标准项目（AVS）的研发}
-        \zh{\item 研发视频编解码加速、在三维视频内容生成方法}
+		\en{\item Focused on video codec design and acceleration, 3D video content generation}
+        \zh{\item 研发视频编解码加速，三维视频内容生成方法}
+		\en{\item Achieved real-time AVS video encoding and decoding in ARM+DSP low power platform}
         \zh{\item AVS-1在ARM+DSP平台上可以达到实时的编解码}
+		\en{\item Developed a semi-automatic image segmentation tool}
         \zh{\item 开发半自动的图像分割和抠图工具}
 	\end{rSubsection}
 	
-	\begin{rSubsection}{Solomon Systech Limited}{Jun 2009 -- May 2010}{Engineering Trainee at Design Engineering Department}{Hong Kong}
+	\begin{rSubsection}{\en{Solomon Systech Limited}\zh{晶门科技}}
+		{2009-06 -- 2010-05}
+		{\en{Engineering Trainee at Design Engineering Department}\zh{设计工程部，工程实习生}}
+		{\en{Hong Kong}\zh{香港}}
 		\en{\item Worked on image compression and coding algorithms for mobile device display system}
-		\en{\item Designed specifications and develop supporting softwares for new microcontroller product}
         \zh{\item 移动端显示设备上的快速图像编解码}
+		\en{\item Designed specifications and develop supporting softwares for new microcontroller product}
         \zh{\item 参与开发和测试新微控制器产品的汇编环境等工具，测试指令集}
 	\end{rSubsection}
 \end{rSection}
@@ -156,27 +168,44 @@ Graduated with 1st Class Honours, including 12-month industrial training
 %	PROJECTS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Projects}
-
-	\begin{rSubsection}{Intracranial Video-electroencephalography}{Apr 2022 -- Oct 2022}{}{}
-		\item Localised EEG electrode contacts from CT scans for pre-surgical planning
-		\item Primarily achieved localisation and automatic grouping
+\begin{rSection}{\en{Projects}\zh{参与项目}}
+    \begin{rSubsection}{音视频编解码技术研究}{2023年01月 -- 现在}{}{}
+        \item 视频编解码技术预研，相关专利分析
+		\item 开发视频编解码新方法，专利申请，参与标准制定
+    \end{rSubsection}
+	
+	\begin{rSubsection}{\en{Intracranial Video-electroencephalography}\zh{颅内视频脑电智能计算}}
+		{2022-04 -- 2022-10}{}{}
+		\en{\item Localised EEG electrode contacts from CT scans for pre-surgical planning}
+        \zh{\item 主要负责的工作是从病人头颅CT扫描中寻找植入的脑电电极}
+		\en{\item Primarily achieved localisation and automatic grouping}
+        \zh{\item 初步实现电极的检测、定位、自动分组}
 	\end{rSubsection}
 
-	\begin{rSubsection}{Auxiliary Video Data Compression and View Synthesis System}{May 2015 -- Nov 2018}{}{}
-		\item Designed compression algorithms for depth maps
-		\item Achieved a compression performance on par with 3D-HEVC or better without texture images
-		\item Developed a GPU-accelerated software for 1080p real-time decoding
+	\begin{rSubsection}{\en{Auxiliary Video Data Compression and View Synthesis System}\zh{辅助视频数据压缩和视角生成系统}}
+		{2015-05 -- 2018-12}{}{}
+		\en{\item Designed compression algorithms for depth maps}
+        \zh{\item 负责三维视频中的深度图压缩方法的设计，并开发了一套原创的深度图像和视频的压缩方法}
+		\en{\item Achieved a compression performance on par with 3D-HEVC or better without texture images}
+        \zh{\item 在不依赖纹理图像的情况下压缩深度图像，其压缩效能与3D-HEVC相当或更佳}
+		\en{\item Developed a GPU-accelerated software for 1080p real-time decoding}
+        \zh{\item 为压缩方法在GPU上设计了一套算法流程，达到1080p视频实时解码}
 	\end{rSubsection}
 		
-	\begin{rSubsection}{3D Video Content Generation and Processing System}{May 2013 -- Aug 2015}{}{}
-		\item Developed a semi-automatic image segmentation and data management tool
-		\item Designed related image segmentation algorithms
+	\begin{rSubsection}{\en{3D Video Content Generation and Processing System}\zh{三维视频内容生成及处理系统}}
+		{2013-05 -- 2015-08}{}{}
+		\en{\item Developed a semi-automatic image segmentation and data management tool}
+        \zh{\item 开发半自动的图像分割和抠图算法}
+		\en{\item Designed related image segmentation algorithms}
+        \zh{\item 为制作三维视频的合作方提供了一个给图像进行物体切割，分层，组织数据的操作工具}
 	\end{rSubsection}
 		
-	\begin{rSubsection}{Real-time AVS-1 Video Codec on Mobile Platform}{Aug 2011 -- May 2013}{}{}
-		\item Ported AVS video codec onto mobile-class ARM+DSP platform
-		\item Achieved real-time 720p encoding and decoding
+	\begin{rSubsection}{\en{Real-time AVS-1 Video Codec on Mobile Platform}\zh{AVS-1视频编码标准在移动平台的实现}}
+		{2011-08 -- 2013-05}{}{}
+		\en{\item Ported AVS video codec onto mobile-class ARM+DSP platform}
+        \zh{\item 将AVS的视频编解码移植到与移动设备功耗相当的ARM+DSP平台}
+		\en{\item Achieved real-time 720p encoding and decoding}
+        \zh{\item 达到720p视频的实时编码和解码}
 	\end{rSubsection}
 
 \end{rSection}
@@ -186,7 +215,7 @@ Graduated with 1st Class Honours, including 12-month industrial training
 %----------------------------------------------------------------------------------------
 
 \iffalse
-\begin{rSection}{Publications and Patents}
+\begin{rSection}{\en{Publications and Patents}\zh{发表的论文与专利}}
 
 Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of Color Image Pixels and Its Applications,'' in \textit{IEEE Transactions on Image Processing}, vol. 28, no. 4, pp. 2037-2050, April 2019.
 
@@ -201,12 +230,14 @@ Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of 
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
+\begin{rSection}{\en{Other Skills}\zh{其它技能}}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{2ex}} l }
-Natural Languages & Mandarin (native), Cantonese (native), English (fluent), French (elementary) \\
-Computer Languages & C/C++, Python, MatLab \\
-Tools & Visual Studio, VSCode, Eclipse, Anaconda platform
+\en{Natural Languages}\zh{人类语言} & 
+\en{Mandarin (native), Cantonese (native), English (fluent), French (elementary)} 
+\zh{普通话（母语），粤语（母语），英语（熟练流利），法语（爱好，会一点）}\\
+\en{Computer Languages}\zh{计算机语言} & C/C++, Python, MatLab \\
+\en{Tools}\zh{开发工具} & Visual Studio, VSCode, Eclipse, Anaconda platform
 \end{tabular}
 
 \end{rSection}
