--- a/multi.tex
+++ b/multi.tex
@@ -96,9 +96,9 @@
 
 \end{rSection}
 
-----------------------------------------------------------------------------------------
-	WORK EXPERIENCE SECTION
-----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
+% 	WORK EXPERIENCE SECTION
+% ----------------------------------------------------------------------------------------
 
 \begin{rSection}{\en{Work Experience}\zh{工作经历}}
 	\begin{rSubsection}{TCL}
