--- a/multi.tex
+++ b/multi.tex
@@ -70,29 +70,17 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{\en{Education}\zh{教育背景}}
-	\begin{rSubsection}{\en{The University of Hong Kong}\zh{香港大学}}
-		{2013-09 -- 2020-06}
-		{\en{Doctor of Philosophy}\zh{哲学博士}}
-		{\en{Hong Kong}\zh{香港}}
-		\item \en{Thesis: }\zh{毕业论文：}\href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
-	\end{rSubsection}
+	{\bf\en{The University of Hong Kong}\zh{香港大学}} \hfill {2013-09 -- 2020-06}\\
+	{\en{Doctor of Philosophy}\zh{哲学博士}} \hfill {\en{Hong Kong}\zh{香港}}\\
+	\en{Thesis: }\zh{毕业论文：}\href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
 
-	\begin{rSubsection}{\en{National University of Singapore}\zh{新加坡国立大学}}
-		{2008-08 -- 2008-12}
-		{\en{Exchange Student, Electrical and Computer Engineering}\zh{电机与电脑工程系交换生}}
-		{\en{Singapore}\zh{新加坡}}
-		\item ~
-	\end{rSubsection}
+	{\bf\en{National University of Singapore}\zh{新加坡国立大学}} \hfill {2008-08 -- 2008-12}\\
+	{\en{Exchange Programme, Electrical and Computer Engineering}\zh{电机与电脑工程系交换生}} \hfill {\en{Singapore}\zh{新加坡}}
 
-	\begin{rSubsection}{\en{The Hong Kong Polytechnic University}\zh{香港理工大学}}
-		{2006-09 -- 2011-08}
-		{\en{Bachelor of Engineering in Electronic and Information Engineering}\zh{工学学士，电子及资讯工程学}}
-		{\en{Hong Kong}\zh{香港}}
-		\en{\item Graduated with 1st Class Honours}
-		\zh{\item 甲等荣誉}
-		\en{\item Included 12-month industrial training}
-		\zh{\item 包含12个月实习训练}
-	\end{rSubsection}
+	{\bf\en{The Hong Kong Polytechnic University}\zh{香港理工大学}} \hfill {2006-09 -- 2011-08}\\
+	{\en{Bachelor of Engineering in Electronic and Information Engineering}\zh{工学学士，电子及资讯工程学}} \hfill {\en{Hong Kong}\zh{香港}}\\
+	\en{Graduated with 1st Class Honours}\zh{甲等荣誉}\\
+	\en{Included 12-month industrial training}\zh{包含12个月实习训练}
 
 \end{rSection}
 
